@@ -16,6 +16,10 @@ Snapshot ????-??-?? ToDo
    - Add scripting for individual testing and comparsion.
    - Support for galapagos (https://github.com/brunoro/galapagos) visualisation tool.
 
+Now
+ * VM
+   - Add comparator for WeakObject and Object to use with STL containers
+
 Version 0.0.4 2012-01-30
  - Support for win32.
  - Relicense as MIT.
